--- a/swis-api/src/main/resources/application.properties
+++ b/swis-api/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+#server.port=8081
 
+# Database configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/swis_api
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.hikari.idle-timeout=10000
+spring.datasource.hikari.maximumPoolSize=75
